Fixed overlapping of photo and definition.

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -133,6 +133,10 @@ header a h1 {
     font-family: 'courier new', monospace;
 }
 
+.masthead .text dt {
+    white-space: nowrap;
+}
+
 .masthead .text dd {
     font-size: .9em;
     line-height: 1.3em;
@@ -523,27 +527,20 @@ a.group1:hover {
     margin-right: 15px;
 }
 
-@media screen and (max-width: 700px) {
-    nav ul li, nav ul li:first-child {
-        display: block;
-        border: none;
-        border-top: solid 1px #444;
-    }
 
-    nav ul li a {
-        width: 100%;
-        padding: .6em 0;
-        border: none;
-    }
 
-    nav.menu-main-menu-container {
-        display: none;
-    }
-
-    nav.menu-button {
-        display: block;
+@media screen and (min-width: 1075px) {
+    .page {
+        margin: 0 auto;
     }
 }
+
+@media screen and (max-width: 930px) {
+    .masthead .text {
+        width: 30%;
+    }
+}
+
 
 @media screen and (max-width: 820px)
 {
@@ -592,9 +589,25 @@ a.group1:hover {
     }
 }
 
-@media screen and (min-width: 1075px) {
-    .page {
-        margin: 0 auto;
+@media screen and (max-width: 700px) {
+    nav ul li, nav ul li:first-child {
+        display: block;
+        border: none;
+        border-top: solid 1px #444;
+    }
+
+    nav ul li a {
+        width: 100%;
+        padding: .6em 0;
+        border: none;
+    }
+
+    nav.menu-main-menu-container {
+        display: none;
+    }
+
+    nav.menu-button {
+        display: block;
     }
 }
 
